axiologic-pla/dev#582 The preview of the leaflet in Arabic text is not aligned from right to left. In LWA it displays correctly.

--- a/code/modals/preview-epi/style.css
+++ b/code/modals/preview-epi/style.css
@@ -218,6 +218,10 @@ main {
     top: 2px;
 }
 
+div[dir="RTL"] .leaflet-accordion-item:before {
+    float: left;
+}
+
 .leaflet-accordion-item.active:before {
     background-image: url("./assets/images/accordion-close.svg");
 }
